--- a/apps/v4/content/docs/components/item.mdx
+++ b/apps/v4/content/docs/components/item.mdx
@@ -54,7 +54,7 @@ import {
   ItemHeader,
   ItemMedia,
   ItemTitle,
-} from "@/registry/new-york-v4/ui/item"
+} from "@/components/ui/item"
 ```
 
 ```tsx showLineNumbers
@@ -159,7 +159,7 @@ import {
   ItemDescription,
   ItemMedia,
   ItemTitle,
-} from "@/registry/new-york-v4/ui/item"
+} from "@/components/ui/item"
 
 export function ItemLink() {
   return (
