--- a/apps/v4/content/docs/components/spinner.mdx
+++ b/apps/v4/content/docs/components/spinner.mdx
@@ -4,7 +4,7 @@ description: An indicator that can be used to show a loading state.
 component: true
 ---
 
-<ComponentPreview name="spinner-demo" />
+<ComponentPreview name="spinner-demo" className="[&_.preview]:p-6" />
 
 ## Installation
 
