--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -9,10 +9,19 @@ toc: false
 import { AlertTriangleIcon } from "lucide-react"
 
 <Callout type="info" title="For Beta Testers" icon={<AlertTriangleIcon />}>
-  You can see a demo of all the new components on the [/new](/new) page. If you
-  want to test the components and see the code, here's a [Open in
-  v0](https://v0.app/chat/api/open?url=https://ui-pre.vercel.app/r/styles/new-york-v4/new-components-01.json)
-  button.
+  You can see a demo of all the new components on the{" "}
+  <a href="/new" target="_blank" rel="noopener noreferrer">
+    /new
+  </a>{" "}
+  page. If you want to test the components and see the code, here's a{" "}
+  <a
+    href="https://v0.app/chat/api/open?url=https://ui-pre.vercel.app/r/styles/new-york-v4/new-components-01.json"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Open in v0
+  </a>{" "}
+  button. button.
 </Callout>
 
 For this round of components, I looked at what we build every day, the boring stuff we rebuild over and over, and made reusable abstractions you can actually use.
