--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -27,7 +27,7 @@ For this round of components, I looked at what we build every day, the boring st
 - [Item](#item): Display lists of items, cards, and more.
 - [Empty](#empty): Use this one for empty states.
 
-### [Spinner](/docs/components/spinner)
+### Spinner
 
 Okay let's start with the easiest ones: **Spinner** and **Kbd**. Pretty basic. We all know what they do.
 
@@ -53,7 +53,7 @@ You can edit the code and replace it with your own spinner.
 
 <ComponentPreview name="spinner-custom" className="[&_.preview]:h-[250px]" />
 
-### [Kbd](/docs/components/kbd)
+### Kbd
 
 Kbd is a component that renders a keyboard key.
 
@@ -78,7 +78,7 @@ Use `KbdGroup` to group keyboard keys together.
 
 You can add it to buttons, tooltips, input groups, and more.
 
-### [Button Group](/docs/components/button-group)
+### Button Group
 
 I got a lot of requests for this one: Button Group. It's a container that groups related buttons together with consistent styling. Great for action groups, split buttons, and more.
 
@@ -134,7 +134,7 @@ You can also use it to add prefix or suffix buttons and text to inputs.
 </ButtonGroup>
 ```
 
-### [Input Group](/docs/components/input-group)
+### Input Group
 
 Input Group lets you add icons, buttons, and more to your inputs. You know, all those little bits you always need around your inputs.
 
@@ -184,7 +184,7 @@ Oh here are some cool ones with spinners:
   className="[&_.preview]:h-[350px]"
 />
 
-### [Field](/docs/components/field)
+### Field
 
 Introducing **Field**, a component for building really complex forms. The abstraction here is beautiful.
 
@@ -245,7 +245,7 @@ Wait here's more. Wrap your fields in `FieldLabel` to create a selectable field 
 
 <ComponentPreview name="field-choice-card" className="[&_.preview]:h-[500px]" />
 
-### [Item](/docs/components/item)
+### Item
 
 This one is a straightforward flex container that can house nearly any type of content.
 
@@ -305,7 +305,7 @@ Need it as a link? Use the `asChild` prop:
 
 <ComponentPreview name="item-link" className="[&_.preview]:h-[400px]" />
 
-### [Empty](/docs/components/empty)
+### Empty
 
 Okay last one: **Empty**. Use this to display empty states in your app.
 
