--- a/apps/v4/content/docs/(root)/changelog.mdx
+++ b/apps/v4/content/docs/(root)/changelog.mdx
@@ -8,7 +8,7 @@ toc: false
 
 For this round of components, I looked at what we build every day, the boring stuff we rebuild over and over, and made reusable abstractions you can actually use.
 
-**These components work with everything. Radix, Base UI, React Aria, you name it. Copy and paste to your projects.**
+**These components work with every component library, Radix, Base UI, React Aria, you name it. Copy and paste to your projects.**
 
 - [Spinner](#spinner): An indicator to show a loading state.
 - [Kbd](#kbd): Display a keyboard key or group of keys.
@@ -121,7 +121,7 @@ You can also use it to add prefix or suffix buttons and text to inputs.
 <ButtonGroup>
   <ButtonGroupText>Prefix</ButtonGroupText>
   <Input placeholder="Type something here..." />
-  <ButtonGroup>Button</ButtonGroup>
+  <Button>Button</Button>
 </ButtonGroup>
 ```
 
