--- a/apps/v4/content/docs/components/empty.mdx
+++ b/apps/v4/content/docs/components/empty.mdx
@@ -178,6 +178,10 @@ Use the `EmptyDescription` component to display the description of the empty sta
 | ----------- | -------- | ------- |
 | `className` | `string` |         |
 
+```tsx
+<EmptyDescription>You do not have any notifications.</EmptyDescription>
+```
+
 ### EmptyContent
 
 Use the `EmptyContent` component to display the content of the empty state such as a button, input or a link.
@@ -188,6 +192,6 @@ Use the `EmptyContent` component to display the content of the empty state such 
 
 ```tsx
 <EmptyContent>
-  <Button>Add data</Button>
+  <Button>Add Project</Button>
 </EmptyContent>
 ```
