--- a/apps/v4/content/docs/components/item.mdx
+++ b/apps/v4/content/docs/components/item.mdx
@@ -104,6 +104,10 @@ The `Item` component has different sizes for different use cases. For example, y
 
 <ComponentPreview name="item-group" className="[&_.preview]:p-4" />
 
+### Header
+
+<ComponentPreview name="item-header" className="[&_.preview]:p-4" />
+
 ### Link
 
 To render an item as a link, use the `asChild` prop. The hover and focus states will be applied to the anchor element.
