--- a/apps/v4/content/docs/components/button.mdx
+++ b/apps/v4/content/docs/components/button.mdx
@@ -5,7 +5,9 @@ featured: true
 component: true
 ---
 
-<Callout variant="info">
+import { InfoIcon } from "lucide-react"
+
+<Callout variant="info" icon={<InfoIcon />}>
 **Updated:** We have updated the button component to add new sizes: `icon-sm` and `icon-lg`. See the
 [changelog](/docs/components/button#changelog) for more details. Follow the
 instructions to update your project.
