refactor: update Spinner component props to use LoaderIcon and Loader2Icon types

--- a/apps/v4/content/docs/components/spinner.mdx
+++ b/apps/v4/content/docs/components/spinner.mdx
@@ -59,7 +59,7 @@ import { LoaderIcon } from "lucide-react"
 
 import { cn } from "@/lib/utils"
 
-function Spinner({ className, ...props }: React.ComponentProps<"svg">) {
+function Spinner({ className, ...props }: React.ComponentProps<typeof LoaderIcon>) {
   return (
     <LoaderIcon
       role="status"
