chore: run registry:build

--- a/apps/v4/content/docs/components/input-group.mdx
+++ b/apps/v4/content/docs/components/input-group.mdx
@@ -253,3 +253,9 @@ All other props are passed through to the underlying `<Textarea />` component.
   </InputGroupAddon>
 </InputGroup>
 ```
+
+## Changelog
+
+### 2025-10-06 `InputGroup`
+
+Add the `min-w-0` class to the `InputGroup` component. See [diff](https://github.com/shadcn-ui/ui/pull/8341/files#diff-0e2ee95d0050ca4c5d82339df86c54e14a6739dc4638fdda0eec8f73aebc2da9).
